--- a/src/BddBundle/Resources/views/Rating/form.html.twig
+++ b/src/BddBundle/Resources/views/Rating/form.html.twig
@@ -3,7 +3,7 @@
 <script type="text/javascript">
     $('document').ready(function () {
         $('#rateit-coaster').rateit(
-            {max: 5, step: 0.5, backingfld: '#rating_coaster_rating', resetable: false, mode: 'font'}
+            {max: 5, step: 0.5, backingfld: '#rating_coaster_value', resetable: false, mode: 'font'}
         ).bind('rated', function () {
             let url = "{{ path('bdd_ajax_update_rating', {'id': coasterId}) }}";
             let formSerialize = $('form').serialize();
@@ -14,30 +14,11 @@
             }, 'JSON');
         });
     });
-
-    {#$('document').ready(function () {#}
-    {#$('#rating_coaster_rating').barrating({#}
-    {#theme: 'fontawesome-stars',#}
-    {#onSelect: function (value, text, event) {#}
-    {#if (typeof(event) !== 'undefined') {#}
-
-    {#var url = "{{ path('bdd_ajax_update_rating', {'id': coasterId}) }}";#}
-    {#var formSerialize = $('form').serialize();#}
-
-    {#$.post(url, formSerialize, function (response) {#}
-    {#//your callback here#}
-    {#console.log(response);#}
-    {#}, 'JSON');#}
-    {#}#}
-    {#}#}
-    {#});#}
-    {#});#}
 </script>
 
 <div id="rateit-coaster" style="font-size: 22px;"></div>
 
-{{ form_errors(form) }}
-{{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
+{{ form_widget(form.value) }}
 
 
 
