--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -9,6 +9,20 @@
     <div class="sidebar-detached">
         <div class="sidebar sidebar-default sidebar-separate">
             <div class="sidebar-content">
+                {% if coaster.averageRating %}
+                <div class="panel panel-body">
+                    <div class="media no-margin">
+                        <div class="media-body">
+                            <h3 class="no-margin text-semibold text-indigo">{{ coaster.averageRating }}</h3>
+                            <span class="text-uppercase text-size-mini text-muted">Moyenne des notes</span>
+                        </div>
+
+                        <div class="media-right media-middle">
+                            <i class="icon-heart6 icon-3x text-danger-400"></i>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
                 <!-- Coaster Rating -->
                 <div class="panel panel-body border-top-primary text-center">
                     <h6 class="no-margin text-semibold">Noter ce coaster !</h6>
