--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
 
     {% block stylesheets %}{% endblock %}
 
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" sizes="32x32" href="{{ asset('cropped-favicon-32x32.png') }}" />
 
     <script type="text/javascript" src="{{ asset('js/core/libraries/jquery.min.js') }}"></script>
 
