--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -1,3 +1,4 @@
+<!-- Page header -->
 <div class="page-header page-header-default">
     <div class="page-header-content">
         <div class="page-title">
@@ -6,12 +7,12 @@
                 {% if subTitle %} - {{ subTitle }}{% endif %}
             </h1>
         </div>
-
         <div class="heading-elements">
             <form class="heading-form" action="#">
                 <div class="form-group">
                     <div class="has-feedback">
-                        <input id="search-coaster" type="search" class="form-control" placeholder="Rechercher un coaster">
+                        <input id="search-coaster" type="search" class="form-control"
+                               placeholder="Rechercher un coaster">
                         <div class="form-control-feedback">
                             <i class="icon-search4 text-size-small text-muted"></i>
                         </div>
@@ -20,31 +21,4 @@
             </form>
         </div>
     </div>
-
-    {#<div class="breadcrumb-line">
-        <ul class="breadcrumb">
-            <li><a href="index.html"><i class="icon-home2 position-left"></i> Home</a></li>
-            <li><a href="layout_fixed.html">Starters</a></li>
-            <li class="active">Fixed layout</li>
-        </ul>
-
-        <ul class="breadcrumb-elements">
-            <li><a href="#"><i class="icon-comment-discussion position-left"></i> Link</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-gear position-left"></i>
-                    Dropdown
-                    <span class="caret"></span>
-                </a>
-
-                <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="#"><i class="icon-user-lock"></i> Account security</a></li>
-                    <li><a href="#"><i class="icon-statistics"></i> Analytics</a></li>
-                    <li><a href="#"><i class="icon-accessibility"></i> Accessibility</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#"><i class="icon-gear"></i> All settings</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>#}
 </div>
