--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -1,76 +1,31 @@
-<div class="sidebar sidebar-main sidebar-default sidebar-fixed">
+<div class="sidebar sidebar-main sidebar-default">
     <div class="sidebar-content">
-
-        <!-- User menu -->
-        <div class="sidebar-user">
-            <div class="category-content">
-                <div class="media">
-                    <a href="#" class="media-left"><img src="{{ asset('images/image.png') }}" class="img-circle img-sm" alt=""></a>
-                    <div class="media-body">
-                        <span class="media-heading text-semibold">Victoria Baker</span>
-                        <div class="text-size-mini text-muted">
-                            <i class="icon-pin text-size-small"></i> &nbsp;Santa Ana, CA
-                        </div>
-                    </div>
-
-                    <div class="media-right media-middle">
-                        <ul class="icons-list">
-                            <li>
-                                <a href="#"><i class="icon-cog3"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /user menu -->
-
-
         <!-- Main navigation -->
         <div class="sidebar-category sidebar-category-visible">
             <div class="category-content no-padding">
                 <ul class="navigation navigation-main navigation-accordion">
-
                     <!-- Main -->
-                    <li class="navigation-header"><span>Main</span> <i class="icon-menu" title="Main pages"></i></li>
-                    <li><a href="../index.html"><i class="icon-home4"></i> <span>Dashboard</span></a></li>
-                    <li>
-                        <a href="#"><i class="icon-stack"></i> <span>Starter kit</span></a>
-                        <ul>
-                            <li><a href="horizontal_nav.html">Horizontal navigation</a></li>
-                            <li><a href="1_col.html">1 column</a></li>
-                            <li><a href="2_col.html">2 columns</a></li>
-                            <li>
-                                <a href="#">3 columns</a>
-                                <ul>
-                                    <li><a href="3_col_dual.html">Dual sidebars</a></li>
-                                    <li><a href="3_col_double.html">Double sidebars</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="4_col.html">4 columns</a></li>
-                            <li>
-                                <a href="#">Detached layout</a>
-                                <ul>
-                                    <li><a href="detached_left.html">Left sidebar</a></li>
-                                    <li><a href="detached_right.html">Right sidebar</a></li>
-                                    <li><a href="detached_sticky.html">Sticky sidebar</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="layout_boxed.html">Boxed layout</a></li>
-                            <li class="navigation-divider"></li>
-                            <li><a href="layout_navbar_fixed_main.html">Fixed top navbar</a></li>
-                            <li><a href="layout_navbar_fixed_secondary.html">Fixed secondary navbar</a></li>
-                            <li><a href="layout_navbar_fixed_both.html">Both navbars fixed</a></li>
-                            <li class="active"><a href="layout_fixed.html">Fixed layout</a></li>
-                        </ul>
+                    <li class="active">
+                        <a href="{{ path('bdd_index_coaster') }}">
+                            <i class="icon-home4"></i> <span>Accueil</span>
+                        </a>
                     </li>
-                    <li><a href="../changelog.html"><i class="icon-list-unordered"></i> <span>Changelog</span></a></li>
-                    <!-- /main -->
-
+                    <li>
+                        <a href="https://coastersworld.fr/"><i class="icon-newspaper2"></i> <span>Actualités</span></a>
+                    </li>
+                    <li>
+                        <a href="https://forum.coastersworld.fr/"><i class="icon-bubble2"></i> <span>Forum</span></a>
+                    </li>
+                    <li>
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            <a href="{{ path('logout') }}"><i class="icon-switch2"></i> <span>Se déconnecter</span></a>
+                        {% else %}
+                            <a href="{{ path('logout') }}"><i class="icon-lock"></i> <span>Se connecter</span></a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
         <!-- /main navigation -->
-
     </div>
 </div>
