--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -6,7 +6,7 @@
                 <ul class="navigation navigation-main navigation-accordion">
                     <!-- Main -->
                     <li class="active">
-                        <a href="{{ path('bdd_index_coaster') }}">
+                        <a href="{{ path('bdd_index') }}">
                             <i class="icon-home4"></i> <span>Accueil</span>
                         </a>
                     </li>
@@ -20,7 +20,7 @@
                         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                             <a href="{{ path('logout') }}"><i class="icon-switch2"></i> <span>Se déconnecter</span></a>
                         {% else %}
-                            <a href="{{ path('logout') }}"><i class="icon-lock"></i> <span>Se connecter</span></a>
+                            <a href="{{ path('facebook_login') }}"><i class="icon-lock"></i> <span>Se connecter</span></a>
                         {% endif %}
                     </li>
                 </ul>
