fix link navbar

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top bg-indigo">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{{ path('bdd_index_coaster') }}">
+        <a class="navbar-brand" href="{{ path('bdd_index') }}">
             <img src="{{ asset('images/logo_light.png') }}" alt="Coasters World"></a>
         <ul class="nav navbar-nav visible-xs-block">
             <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
