--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
     <div class="alert alert-info alert-styled-left alert-arrow-left alert-component">
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span><span class="sr-only">Close</span>
         </button>
-        <h6 class="alert-heading text-semibold">Découvez, notez et partagez les montagnes russes du monde entier !</h6>
+        <h6 class="alert-heading text-semibold">Découvrez, notez et partagez les montagnes russes du monde entier !</h6>
         Space Mountain, c'est vraiment Hyper ? Et les E-powered, c'est vraiment des coasters ? Goudurix, c'est vraiment
         si terrible que ça ? PAS DE PANIQUE, toutes les réponses sont ici !
         Et pour en profiter, c'est très rapide : <b>2 clics suffisent pour se <a href="{{ path('facebook_login') }}">créer un compte</a> !</b>
