--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,6 +57,25 @@
 <script type="text/javascript" src="{{ asset('js/core/app.js') }}"></script>
 <script type="text/javascript" src="{{ asset('js/plugins/ui/ripple.min.js') }}"></script>
 <!-- /theme JS files -->
+<script type="text/javascript" src="{{ asset('js/plugins/typeahead/typeahead.bundle.min.js') }}"></script>
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+<script>
+    let url = Routing.generate('bdd_ajax_search_all_coaster');
+    let dataSource = new Bloodhound({
+        datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+        queryTokenizer: Bloodhound.tokenizers.whitespace,
+        prefetch: url,
+    });
+
+    $('#search-coaster').typeahead({highlight: true}, {
+        displayKey: 'name',
+        source: dataSource.ttAdapter(),
+        limit: 7,
+    }).bind('typeahead:select', function (ev, suggestion) {
+        window.location.href = Routing.generate('bdd_show_coaster', {slug: suggestion.slug});
+    });
+</script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
