fix bg image login

--- a/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
+++ b/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
@@ -18,7 +18,7 @@
 </head>
 
 <body class="login-container login-cover"
-      style="background: url({{ asset('images/backgrounds/login.jpg') }}) no-repeat;">
+      style="background: url({{ asset('images/backgrounds/login.jpg') }}) no-repeat; background-size: cover;">
 
 <!-- Page container -->
 <div class="page-container">
