page best coasters

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -10,6 +10,11 @@
                             <i class="icon-home4"></i> <span>Accueil</span>
                         </a>
                     </li>
+                    <li class="active">
+                        <a href="{{ path('coaster_ranking') }}">
+                            <i class="icon-trophy2"></i> <span>Meilleurs coasters</span>
+                        </a>
+                    </li>
                     <li>
                         <a href="https://coastersworld.fr/"><i class="icon-newspaper2"></i> <span>Actualités</span></a>
                     </li>
