--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -96,6 +96,7 @@
                             <div class="pull-right">{{ coaster.builtCoaster.duration|date("i\\m s\\s") }}</div>
                         </div>
                     {% endif %}
+                    {% if coaster.openingDate %}
                     <div class="form-group">
                         <label class="control-label no-margin text-semibold">Ouverture:</label>
                         <div class="pull-right">
@@ -106,6 +107,7 @@
                             {% endif %}
                         </div>
                     </div>
+                    {% endif %}
                     {% if coaster.closingDate %}
                         <div class="form-group">
                             <label class="control-label no-margin text-semibold">Fermeture:</label>
@@ -115,6 +117,21 @@
                                 {% else %}
                                     {{ coaster.closingDate|date("d/m/Y") }}
                                 {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
+                    {% if coaster.vr %}
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">VR:</label>
+                            <div class="pull-right"><i class="icon-checkmark3"></i></div>
+                        </div>
+                    {% endif %}
+                    {% if coaster.price %}
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Prix:</label>
+                            <div class="pull-right">
+                                {{ coaster.price|number_format(0, ',', ' ') }}
+                                {{ coaster.currency.symbol }}
                             </div>
                         </div>
                     {% endif %}
