--- a/src/BddBundle/Resources/views/Profile/ratings.html.twig
+++ b/src/BddBundle/Resources/views/Profile/ratings.html.twig
@@ -16,17 +16,23 @@
             $('.rating-coaster').rateit(
                 {max: 5, step: 0.5, resetable: false, mode: 'font'}
             ).bind('rated', function () {
-                {#let url = "{{ path('bdd_ajax_update_rating', {'id': 1}) }}";#}
                 var url = Routing.generate('rating_edit', {'id': this.dataset.coaster});
-                console.log(url);
-                console.log('rating:', $(this).rateit('value'));
-                console.log('obj:', this.dataset.coaster);
 
                 $.post(url, {value: $(this).rateit('value')}, function (response) {
                     console.log(response);
                 }, 'JSON');
             });
         });
+
+        function deleteRating(id) {
+            var url = Routing.generate('rating_delete', {'id': id});
+            $.ajax({
+                url: url,
+                type: "DELETE",
+            }).done(function () {
+                $('tr#tr-coaster-'+id).remove();
+            });
+        }
     </script>
 {% endblock %}
 
@@ -44,12 +50,12 @@
                     <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'Ouverture', ['c.openingDate']) }}</th>
                     <th>{{ knp_pagination_sortable(ratings, 'Note', ['r.value']) }}</th>
                     <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'Noté le', 'r.updatedAt') }}</th>
-                    {#<th class="text-center hidden-xs" style="width: 20px;"><i class="icon-arrow-down12"></i></th>#}
+                    <th class="text-center hidden-xs" style="width: 20px;"><i class="icon-arrow-down12"></i></th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for rating in ratings %}
-                    <tr>
+                    <tr id="tr-coaster-{{ rating.coaster.id }}">
                         <td>
                             <a href="{{ path('bdd_show_coaster', {'slug': rating.coaster.slug}) }}"
                                class="text-semibold">{{ rating.coaster.name }}</a>
@@ -73,17 +79,9 @@
                         <td class="hidden-xs">
                             {{ rating.updatedAt|date("d/m/Y") }}
                         </td>
-                        {#<td class="text-center hidden-xs">#}
-                        {#<ul class="icons-list">#}
-                        {#<li class="dropdown">#}
-                        {#<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i#}
-                        {#class="icon-menu7"></i></a>#}
-                        {#<ul class="dropdown-menu dropdown-menu-right">#}
-                        {#<li><a href="#"><i class="icon-trash"></i> Supprimer la note</a></li>#}
-                        {#</ul>#}
-                        {#</li>#}
-                        {#</ul>#}
-                        {#</td>#}
+                        <td class="text-center hidden-xs">
+                            <a onclick="deleteRating({{ rating.coaster.id }});"><i class="icon-trash"></i></a>
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
