--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Base de données intéractive de coasters{% endblock %}
+{% block title %}Découvrez, notez et partagez tous les coasters{% endblock %}
 {% set title = 'Bienvenue !' %}
 {% set subTitle = '' %}
 
