--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -10,9 +10,14 @@
                             <i class="icon-home4"></i> <span>Accueil</span>
                         </a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="{{ path('coaster_ranking') }}">
                             <i class="icon-trophy2"></i> <span>Meilleurs coasters</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('user_list') }}">
+                            <i class="icon-users-4"></i> <span>Palmarès des membres</span>
                         </a>
                     </li>
                     <li>
