--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,3 +1,5 @@
 <div class="footer text-muted">
-    &copy; {{ 'now'|date('Y') }} Coasters World.
+    &copy; {{ 'now'|date('Y') }}.
+    Made with <i class="icon-heart6"></i> by the <a href="https://coastersworld.fr" target="_blank">Coasters World</a>
+    community.
 </div>
