--- a/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
+++ b/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet"
           type="text/css">
     <link href="{{ asset('css/icons/icomoon/styles.css') }}" rel="stylesheet" type="text/css">
-    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" type="text/css">
-    <link href="{{ asset('css/core.css') }}" rel="stylesheet" type="text/css">
-    <link href="{{ asset('css/components.css') }}" rel="stylesheet" type="text/css">
-    <link href="{{ asset('css/colors.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('css/core.min.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('css/components.min.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('css/colors.min.css') }}" rel="stylesheet" type="text/css">
     <!-- /global stylesheets -->
 </head>
 
